force-app/main/default/objects/pse__Timecard_Transmission__c/pse__Timecard_Transmission__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TimecardTransmissionHelp</customHelpPage>
    <description>Stores the results of each timecard transmission between a third-party application and PSA.</description>
    <label>Timecard Transmission</label>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Timecard Transmission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecard Transmissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>