force-app/main/default/objects/pse__Timecard_Transmission__c/fields/pse__Message__c.field-meta.xml
<CustomField>
    <fullName>pse__Message__c</fullName>
    <description>Message returned when an error occurs.</description>
    <inlineHelpText>Message returned when an error occurs.</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>